--- a/tibet-research/index.org
+++ b/tibet-research/index.org
@@ -1,7 +1,27 @@
+#+TITLE: 西藏行调研
+#+AUTHOR: YIPING QI
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="worg.css" />
 * 西藏行调研
 ** 行程
-
+#+CAPTION: 西藏地图
+#+ATTR_HTML: width="70%" height="70%"
+[[file:tibet.jpg]]
 *** 拉萨
+#+CAPTION: 拉萨地图
+#+ATTR_HTML: width="70%" height="70%"
+[[file:lasa.jpg]]
+**** 景点简介
+#+CAPTION: 景点价格
+| 景点     | 开放时间                        | 价格  |
+|----------+---------------------------------+-------|
+| 布达拉宫 | 上午9:00-12:00 下午15:30-16:30  | 200元 |
+| 色拉寺   | 09:00-16:00                     | 55元  |
+| 哲蚌寺   | N/A                             | 50元  |
+| 罗布林卡 | 周一 - 周六 (09:00 - 18:00)     | 80元  |
+| 小昭寺   | 9:00-17:00                      | 20元  |
+| 大昭寺   | 上午7:00-12:00  下午15:00-18:30 | 70元  |
++ 布达拉宫
+  
 *** 南下：林芝
 *** 北上：羊湖，纳木错
 ** 物品清单
