update travel guide

--- a/tibet-research/index.org
+++ b/tibet-research/index.org
@@ -1,17 +1,13 @@
 #+TITLE: 西藏行调研
 #+AUTHOR: YIPING QI
-#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="worg.css" />
+#+STYLE: <link rel="stylesheet" type="text/css" href="style.css" />
 * 西藏行调研
 ** 行程
-#+CAPTION: 西藏地图
-#+ATTR_HTML: width="70%" height="70%"
-[[file:tibet.jpg]]
+[[file:tibet.jpg][西藏地图]]
 *** 拉萨
-#+CAPTION: 拉萨地图
-#+ATTR_HTML: width="70%" height="70%"
-[[file:lasa.jpg]]
-**** 景点简介
-#+CAPTION: 景点价格
+[[file:lasa.jpg][拉萨地图]]
+
+*景点价格*
 | 景点     | 开放时间                        | 价格  |
 |----------+---------------------------------+-------|
 | 布达拉宫 | 上午9:00-12:00 下午15:30-16:30  | 200元 |
@@ -20,10 +16,60 @@
 | 罗布林卡 | 周一 - 周六 (09:00 - 18:00)     | 80元  |
 | 小昭寺   | 9:00-17:00                      | 20元  |
 | 大昭寺   | 上午7:00-12:00  下午15:00-18:30 | 70元  |
+
+*景点简介*
 + 布达拉宫
-  
-*** 南下：林芝
-*** 北上：羊湖，纳木错
+  + 公交：1路、6路、7路、12路、20路、24路、25路等
+  + 小贴士
+    + 每周一、三、五是藏民朝佛的日子，人很多。
+    + 旺季时门票需提前一天排队预订,第二天凭订票单购买门票。
+    + 在布达拉宫参观需要遵循所有藏传佛教的禁忌,例如不能戴帽,进入宫殿内,不
+      能拍照不能踩踏门槛等,所有游客 都需在1小时内完成参观。
+    + 如果时间富裕,建议参观完布达拉宫后,再顺时针绕布达拉宫转上一圈。看
+      看那些日日朝拜转经人的生活,也顺便体验一下雪域居民的生活。
+    + 殿内较阴冷，即使夏季也最好准备件外套。
+    + 布宫内洗手间较少也难找，游览前最好在入口处先解决为好。另布宫后门
+      的厕所很有特色，也是一景，别错过。
+    + 拍摄布达拉宫的全景:马路对面的小山是公认的最好选择。小山的标志是有
+      两个信号塔, 6:30-18:00开门,收费0.5元/人,不给票据。
++ 色拉寺
+  + 公交：16路、24路、25路
+  + 小贴士
+    + 参观时间须2小时。
+    + 星期一至星期五下午有喇嘛辨经（15：00-17：00）值得一看，15：00前赶
+      到。
+    + 色拉寺检查不严，售票处在外面道路边上的小房子里，装扮不象游客的话
+      可直驱而入。
++ 哲蚌寺
+  + 公交：4路
+  + 小贴士
+    + 参观时间须2个半小时，距市区较远，早上有4路中巴到寺庙
+    + 哲蚌寺很大，依山而建，自然有机会逃票。
+    + 每周三有个法事活动，众多喇嘛集聚一堂念经，能赶到这时去，收获更大。
++ 罗布林卡
+  + 公交：6路、8路、13路、14路、24路、26路等。
+  + 小贴士
+    + 参观时间1个半小时。
++ 大昭寺、小昭寺
+  + 参观须1个多小时，早上基本都是朝佛的人去，人很多，旅游团一般都是下午
+    去从侧门进。若你是自助散客，建议你早上去，从正门跟从朝费的人一同进
+    去，不用买票，而且早上很多小殿都开放。从大昭寺出来，八角街特别值得
+    一逛，这里既是转经路，也是购买纪念品和体验藏民俗最佳之地。可以顺路
+    参观一下巷内的民居，有首歌这样形容：“古老的八角街上，窗户比门还多，
+    窗户里的女郎，骨头比肉还软。”
+  + 公交：5路、6路、7路、8路、10路、12路、15路、17路、18路、19路、20路、
+    21路、22路、23路等。
+  + 小贴士
+    + 到大昭寺来，一定小心这里的乞丐，要么多准备些1角的零钱，要么别理他
+      们，赶快走开，否则你将有很多痛苦的体验。
+*** 南下线
++ 林芝
++ 鲁朗
++ 巴松措
++ 雅鲁藏布大峡谷
+*** 北上线
++ 羊卓雍湖
++ 纳木错
 ** 物品清单
 下面罗列的一些东西，很多或许可以不用携带，当地应该有卖。
 + 证件
@@ -42,18 +88,105 @@
   + 备用电池(多块)及充电器
 + 通讯导航
   + 手机1-2只及充电器、电池
++ 食品
+  + 高能食品，最好是压缩干粮或巧克力，次之为饼干或水果糖。
 + 药品
   + 肠胃药:吗叮呤、黄连素、十滴水
   + 感冒药:板蓝根(每天两包)、百服宁(退烧型)
   + 维生素片、润喉片、止血绷带、创可贴
   + 外伤药 、消炎药、金霉素眼膏
   + 红景天、高原安、西洋参、葡萄糖等
+  + 硝酸甘油或其他助心之药
 + 其他
   + 洗漱用品:牙刷、牙膏、肥皂、毛巾、洗发水、梳子、剃须刀、润
     唇膏、护手霜、防晒霜
   + 卫生用品:湿纸巾、卫生纸、卫生巾
   + 手电
   + 电脑
+  + 地图
+** 餐饮
+
+*西藏名菜*
+
+　　传统的待客筵席由奶茶、蕨麻米饭、灌汤包子、手抓羊肉、大烩菜、酸奶６
+道食品组成，饱含民族习尚。　　　　　　　　　　　　
+
+　　炸灌肺，藏语音洛乍。多见于拉萨等地。以羊肺为主料配以酥油、面粉等先
+煮后炸而成。特点是色泽淡褐，外酥脆里软、味香美。　　　　　　　　　　　
+
+　　蒸牛舌，藏语音杰郎最。多见于拉萨等地。以牛舌肉为主料，经煮蒸而成。
+特点是入口软嫩，味道鲜美而带椒香。
+
+　　氽灌肠，又称三肠、五肠。以新鲜羊小肠为衣，分别灌以羊血、羊肉、青稞
+面或豆面，分称血肠、肉肠、面肠，合称三肠；另有灌以羊肝、羊油者，分别称
+肝肠、油肠，与前三肠合称五肠。此菜多为藏族同胞在新年时成批灌制，供年节
+氽食。
+
+　　香煮油脾，藏语音才也。主要流行于青海玉树藏族自治州一带。以羊脾、羊
+油为主料煮制而成。特点是味鲜香、肥而不腻。
+
+　　火烧蕨麻猪，流行于甘肃甘南藏族自治州一带。以蕨麻猪为原料外裹泥巴暗
+火中炮制而成。蕨麻猪为甘南草原特产，因当地人所饲养的猪常在草原觅食蕨麻
+（学名鹅绒委陵菜，其地下茎呈不规则块状，富含淀粉，味香甜，可作干果食用，
+俗称人参果），故名。此种猪肉质嫩而味鲜美，少脂肪。此菜的特点是皮脆肉嫩，
+味道特别鲜美。　　　　　　　　　　　　
+
+　　夏河蹄筋，以羊蹄筋为主料，配以木耳、黄花等分别蒸、煮而成。特点是柔
+滑鲜香。此菜始源于甘南藏族自治州一带，据传明代已著名。　　　　
+
+　　爆焖羊羔肉，主要流行于青海省农业区的藏族群众中。以鲜羊羔肉为原料爆
+炒而成。特点是柔嫩爽口，酥辣鲜香。　　　　　　　　　　　　
+
+　　吹肝，主要流行于云南迪庆藏族自治州一带。在云南的白族、汉族中也有食
+用。以猪肝为主料制成。特点是味道香鲜，开胃爽口。
+
+*西藏饮食*
+
+　　青稞：青稞又称稞大麦、元麦是藏族人民制作糌粑的主要原料，把青稞炒过
+后磨成面用酥油拌着吃。人们也将青稞与豌豆掺合制作糌粑。青稞做成的糌粑不
+但是藏族的传统食品，而且作为藏餐出现在拉萨的主要饭店，成为招待中外宾客
+的重要食品，在宗教节日中，藏族人民还要抛撒糌粑，以示祝福。
+
+　　牛羊肉：藏族人民主要以食牛、羊肉和奶制品为主。在牧区一般不食蔬菜，
+饮食单调，从单一的饮食结构来说，牧区乃至整个西藏都属高脂肪，高蛋白饮食
+区。众所周知牛羊肉热量很高，这有助于生活在高海拔地区的人们抵御寒冷。有
+趣的是藏族人民有食生肉的习惯，若到一些牧民或农区家中，你会看到挂到屋内
+或帐篷内的风干的牛羊肉，你若去这些人家作客，主人会拿出风干的牛羊肉叫你
+品尝，这种风味只有在高原才能品尝得到。
+
+　　酥油：在西藏随时随地可以见到酥油。在拉萨的八角街，牧民拿着一块块、
+一包包的酥油，摆在地上，拿在手上，到处兜售；不论城乡，每个粮油店里，一
+定断不了酥油的供应；走进每个家庭，柜子里摆的东西可以缺这少那，但不会没
+有酥油。总之，酥油是每个藏族人时刻不可缺少的食品。
+
+　　酥油茶：酥油茶是藏族群众每日不离的钦料。一般藏族群众早上定要喝上几
+杯酥油茶，才去劳动或工作。到藏族群众家中作客，一般都会得到酥油茶的款待。
+酥油茶的制作方法，是将砖茶用水久熬成浓汁，把茶水倒入“董莫”（酥油茶桶）
+放入酥油和食盐，用力将“甲罗”上下来回抽几十下，搅得水乳交融，再倒进锅里
+加热，便成了可喝的酥油茶了。酥油茶因为有酥油，所以能产生很大的热量，喝
+后可御寒，是很适合高寒地区的一种钦料。酥油茶里茶汁也很浓，又能起生津止
+渴的作用。
+
+　　糌粑：糌粑是藏族的一种主要食品。糌粑的制作方法是，将青稞（属大麦类，
+有白色、紫黑色二种）晒干炒熟，磨成细面便是待食的糌粑了。这与我国北方的
+炒面相似，但北方的炒面是先磨后炒，西藏的糌粑却是先炒后磨，不除皮。藏族
+吃糌粑，大都是先把少量酥油茶倒进碗里，加点糌粑面，用手不断搅匀，只到能
+捏成团为止，食时用手不断在碗里搅捏，成团叫“粑”，送嘴而食。
+
+　　青稞酒 用青稞酿成的一种度数很低的酒，藏族群众男女老少都喜欢喝，是喜
+庆节日必备之钦料。
+
+　　酸奶子：有两种，一种是奶酪，藏语叫“达雪”，是用提炼过酥油的奶制作的；
+另一种是没提过酥油的牛奶作的，藏语称“俄雪”。酸奶子是牛奶经过糖化作用以
+后的食品，营养更为丰富，也较易消化，适合老人和小孩吃。
+
+　　奶渣：奶提炼酥油后剩下的物质，经烧煮，水份蒸发后，剩下是奶渣。奶渣
+可以做成奶饼、奶块。
+
+　　风干肉：藏族喜欢吃风干牛羊肉，其他民族看着感到有点怕，也觉得不太卫
+生。其实，风干肉一般在冬天，往往是十一月底做。这时气温都在零度以下，把
+牛、羊肉割下来，挂在阴凉处，让其冰冻风干，即去水份，又保持鲜味。到了第
+二年三月以后拿下来烤食或生食，味道是鲜美的。
 ** 注意事项
 + 游客须身体健康，严重心脏病、高血压患者不宜进藏；
 + 进藏旅游个人自备物品：太阳镜、防晒霜、润唇膏、运动衣裤、旅游鞋、雨具
@@ -124,6 +257,23 @@
 + 在西藏拍照时，如送一些糖果或文具礼品给当地的小朋友，他们会很开心，会
   有利于同他们的沟通交往，但不提倡给予金钱
 
+** 其他
+*** 逃票
++ 寺庙类： 
+  + 早上（8:30）和傍晚（6:00）无人看守，可轻易入内。 
+  + 利用人多混入内。 
+  + 说找高僧开光。 
+  + 说找熟人。 
+  + 利用旧票入内。 
+  + 讲价打折。 
+  + 走小门。 
+  + 说曾经来过，明天要离开了，今天特地来拜一下。 
+  + 装语言不通（事实上也是语言不太通）。 
+  + 导游证。导游证在内地已经不能免票了，不过西藏还可以。 
+  + 随机应变，总能进去的。
++ 风景类： 
+  + 绕道入内。 
+  + 讲价打折。 
 ** 相关网站
 + [[http://www.newsmth.net/nForum/board/Travel][水木Travel]]
 + [[http://www.mafengwo.cn][蚂蜂窝]]
@@ -131,3 +281,6 @@
 + [[http://lvyou.baidu.com/][百度旅游]]
 + [[http://travel.ctrip.com/][携程]]
 + [[http://www.dreams-travel.com/tibet][DreamTravel]]
++ [[file:guide_baidulvyou-lasa.pdf][拉萨攻略]]
++ [[file:guide_baidulvyou-linzhi.pdf][林芝攻略]]
++ [[file:guide_baidulvyou-namucuo.pdf][纳木错]]
