add travel notes

--- a/tibet-research/index.org
+++ b/tibet-research/index.org
@@ -1,10 +1,10 @@
 #+TITLE: 西藏行调研
 #+AUTHOR: YIPING QI
 #+STYLE: <link rel="stylesheet" type="text/css" href="style.css" />
-* 西藏行调研
-** 行程
+* 行程
 [[file:tibet.jpg][西藏地图]]
-*** 拉萨
+[[file:tibet_travel.jpg][西藏旅游线路图]]
+** 拉萨
 [[file:lasa.jpg][拉萨地图]]
 
 *景点价格*
@@ -18,7 +18,14 @@
 | 大昭寺   | 上午7:00-12:00  下午15:00-18:30 | 70元  |
 
 *景点简介*
-+ 布达拉宫
++ [[http://baike.baidu.com/view/1663.htm][布达拉宫]]
+
+  矗立在拉萨市中心的布达拉宫是这座雪域之都乃至整个青藏高原的象征。这座
+  世界上海拔最高、最雄伟的宫殿是藏文化最灿烂的象征。“布达拉”，是梵语音
+  译，又译作“普陀罗”或“普陀”，原指观世音菩萨所居之岛，所以布达拉宫又被
+  称为第二普陀山。从松赞干布到十四世达赖的1300多年间，先后有9个藏王和
+  10个达赖喇嘛在这里施政布教。
+
   + 公交：1路、6路、7路、12路、20路、24路、25路等
   + 小贴士
     + 每周一、三、五是藏民朝佛的日子，人很多。
@@ -32,7 +39,14 @@
       的厕所很有特色，也是一景，别错过。
     + 拍摄布达拉宫的全景:马路对面的小山是公认的最好选择。小山的标志是有
       两个信号塔, 6:30-18:00开门,收费0.5元/人,不给票据。
-+ 色拉寺
++ [[http://baike.baidu.com/view/45444.htm][色拉寺]]
+
+  色拉寺全称为“色拉大乘洲”，位于西藏拉萨布达拉宫北面3公里的巨石峥嵘的色
+  拉乌孜山脚。与甘丹寺、哲蚌寺合称“拉萨三大寺”。“色拉”在藏语里是最玫瑰
+  的意思。传说山下修寺时这里长满了野玫瑰，色拦寺因此得名。作为拉萨三大
+  寺庙之一，色拉寺可能不如哲蚌寺宏大多彩，但这里的辩经活动绝对是非常有
+  特色的。
+
   + 公交：16路、24路、25路
   + 小贴士
     + 参观时间须2小时。
@@ -40,37 +54,169 @@
       到。
     + 色拉寺检查不严，售票处在外面道路边上的小房子里，装扮不象游客的话
       可直驱而入。
-+ 哲蚌寺
++ [[http://baike.baidu.com/view/45437.htm][哲蚌寺]]
+
+  哲蚌寺是藏传佛教格鲁派三大寺庙之一，也是全世界最大的寺庙，位于拉萨市
+  西郊10公里处的根培乌山上，每年雪顿节哲蚌寺都会举行晒佛仪式，在山坡上
+  展示一幅巨型佛像唐卡，引来大批信徒和游客前来祈福，场面十分壮观。
+
   + 公交：4路
   + 小贴士
     + 参观时间须2个半小时，距市区较远，早上有4路中巴到寺庙
     + 哲蚌寺很大，依山而建，自然有机会逃票。
     + 每周三有个法事活动，众多喇嘛集聚一堂念经，能赶到这时去，收获更大。
-+ 罗布林卡
++ [[http://baike.baidu.com/view/21796.htm][罗布林卡]]
+
+  罗布林卡俗称拉萨的颐和园，藏语意为“宝贝公园”，为历代达赖喇嘛的夏宫。
+  每当夏日来临，达赖喇嘛便从布达拉宫转移到罗布林卡办公。其建筑以格桑颇
+  章、金色颇章、达登明久颇章为主体，有房374间，是西藏人造园林中规模最大、
+  风景最佳的、古迹最多的园林。已被辟为人民公园。雪顿节期间会有丰富的表
+  演活动。
+
   + 公交：6路、8路、13路、14路、24路、26路等。
   + 小贴士
     + 参观时间1个半小时。
-+ 大昭寺、小昭寺
-  + 参观须1个多小时，早上基本都是朝佛的人去，人很多，旅游团一般都是下午
-    去从侧门进。若你是自助散客，建议你早上去，从正门跟从朝费的人一同进
-    去，不用买票，而且早上很多小殿都开放。从大昭寺出来，八角街特别值得
-    一逛，这里既是转经路，也是购买纪念品和体验藏民俗最佳之地。可以顺路
-    参观一下巷内的民居，有首歌这样形容：“古老的八角街上，窗户比门还多，
-    窗户里的女郎，骨头比肉还软。”
++ [[http://baike.baidu.com/view/28306.htm][大昭寺、小昭寺]]
+
+  大昭寺坐落在拉萨市的中心，建于7世纪中叶，是西藏最早的木构建筑，也是西
+  藏最辉煌的一座叶蕃时期的建筑。大昭寺殿宇雄伟，庄严绚丽，每日被转经的
+  人流簇拥着。大昭寺是西藏历来重大佛事活动的中心所在，更被称作是“西藏的
+  眼睛”。
+
   + 公交：5路、6路、7路、8路、10路、12路、15路、17路、18路、19路、20路、
     21路、22路、23路等。
   + 小贴士
     + 到大昭寺来，一定小心这里的乞丐，要么多准备些1角的零钱，要么别理他
       们，赶快走开，否则你将有很多痛苦的体验。
-*** 南下线
-+ 林芝
-+ 鲁朗
-+ 巴松措
-+ 雅鲁藏布大峡谷
-*** 北上线
-+ 羊卓雍湖
-+ 纳木错
-** 物品清单
+    + 参观须1个多小时，早上基本都是朝佛的人去，人很多，旅游团一般都是下
+      午去从侧门进。若你是自助散客，建议你早上去，从正门跟从朝费的人一
+      同进去，不用买票，而且早上很多小殿都开放。从大昭寺出来，八角街特
+      别值得一逛，这里既是转经路，也是购买纪念品和体验藏民俗最佳之地。
+      可以顺路参观一下巷内的民居，有首歌这样形容：“古老的八角街上，窗户
+      比门还多，窗户里的女郎，骨头比肉还软。”
++ [[http://baike.baidu.com/view/244906.htm][八廓街]]
+
+  八廓街位于古城拉萨的中心，是拉萨本来面目保留得最完整的街道。它是拉萨
+  的宗教、经济、文化、民族手工艺乃至西藏的风土人情的集结地，也是旅行者
+  到拉萨必游之地。
+
+  + 小贴士
+    + 逛八角街购物最好别冲动，小心后悔。
+    + 在八角街购物、游览，顺便去"八廓咖啡厅"或"玛吉阿米"一边喝点饮料，
+      一边看看转经的人群。
+** 南下线 [[http://baike.baidu.com/view/642686.htm][林芝地区]]
+
+林芝为西藏自治区一个地区，位于西藏自治区东南部，地区政府驻林芝县八一镇。
+林芝地区地处雅鲁藏布江中下游。其西部和西南部分别与拉萨、山南两地市相连，
+东部和北部分别与昌都地区、那曲地区相连，南部与印度、缅甸两国接壤。林芝
+平均海拔3100米，总面积116175平方公里，总人口14万人。被称为西藏的江南，
+以世界上最深的峡谷——雅鲁藏布江大峡谷著称于世。
+
++ [[http://baike.baidu.com/view/158984.htm][八一]]
+
+  八一镇是林芝地区政治经济及文化中心，位于尼洋河畔，著名景点有“夏瀑冬
+  冰”、日及木错湖、巨柏林等。离八一镇东南40多千米的帮纳村，有一棵1600多
+  年树龄的“桑树王”，树高7.04米，胸径13米多，传为松赞干布和文成公主栽种。
+  在离八一镇10多千米的巴结村，有一片占地10公顷珍贵的特有柏树品种——西藏
+  巨柏。其中有一棵被称为“巨柏王”、“活文物”的巨柏，树高50余米，胸径58米，
+  树龄高达2500岁左右。
+
+  从八一镇向东，经过林芝县府所在地普拉，再向南就是尼洋河与雅鲁藏布江的
+  交汇处，河面宽阔，河面如镜，可乘船浏览，顺流而下近50千米，就是米林县
+  派乡——雅鲁藏布大峡谷的起始点。
+
++ [[http://baike.baidu.com/view/1086818.htm][鲁朗]]
+
+  鲁朗，藏语意为“龙王谷”，也是“叫人不想家”的地方。鲁朗海拔3700米，位于
+  距八一镇80公里左右的川藏路上，坐落在深山老林之中；这是一片典型高原山
+  地草甸狭长地带。两侧青山由低往高分别由灌木丛和崐茂密的云杉和松树组成
+  “鲁朗林海”；中间是整齐划一的草甸，崐犹如人工整治一般；草甸中，溪流蜿
+  蜒，泉水潺潺，草坪上报春崐花、紫苑花、草梅花、马先蒿花等成千上万种野
+  花怒放盛开，颇崐具林区特色的木篱笆、木板屋、木头桥及农牧民的村寨星落
+  棋布、崐错落有秩，勾画了一幅恬静、优美的“山居图”。
+  
+  
++ [[http://baike.baidu.com/view/256875.htm][巴松措]]
+
+  巴松措又名错高湖，藏语中是“绿色的水”的意思。巴松措湖面海拔3700多米，
+  湖面面积达6千多亩，位于距林芝地区工布江达县50多千米的巴河上游的高峡深
+  谷里，是红教的一处著名神湖和圣地。巴松措湖水清澈见底，四周雪山环抱，
+  如一块镶嵌于高山峡谷的碧玉，宁静薄媚又不失大气。与西藏其他三大神湖相
+  比，巴松错完全是别样的感觉，所以到了林芝，没有理由不去巴松错体验一下。
+
+  “千回百转始初见，疑似仙境在人间”，巴松措是藏传佛教中的神湖，又名错高
+  湖，藏语意为“三岩三湖”。三岩是指湖区被三座富有宗教意味的山岩环绕着，
+  分别是“赞给扎”文殊菩萨道场，“多吉扎”观音菩萨道场，“拉扎”金刚手道场，
+  象征着慈悲、智慧与力量，形成了藏传佛教的隐喻体系：三湖是指深受徒步旅
+  游者青睐的巴松措、钟措、新措。此地每年都有藏民来此“转湖”、“转山”祈福。
+
++ [[http://baike.baidu.com/view/38822.htm][雅鲁藏布大峡谷]]  
+
+  雅鲁藏布大峡谷是世界第一大（深度、长度）峡谷。获得中国世界纪录协会世
+  界最深大峡谷、世界最长大峡谷两项世界纪录。
+
+  雅鲁藏布大峡谷景区位于西藏林芝素有“背包客圣地”之称的边境小镇派镇。北
+  起米林县的大渡卡村（海拔2880米），南到墨脱县巴昔卡村（海拔115米），雅
+  鲁藏布大峡谷长504.9公里，平均深度2800米，最深处达6009米，是世界第一大
+  峡谷。整个峡谷地区冰川、绝壁、陡坡、泥石流和巨浪滔天的大河交错在一起，
+  环境十分恶劣。许多地区至今仍无人涉足，堪称“地球上最后的秘境”，是地质
+  工作少有的空白区之一。
+
+** 北上线 那曲地区
++ [[http://baike.baidu.com/view/2377.htm][羊卓雍湖]]
+
+  羊卓雍措，简称羊湖，距拉萨不到100公理，与纳木措、玛旁雍措并称西藏三大
+  圣湖，是喜马拉雅山北麓最大的内陆湖泊，湖光山色之美，冠绝藏南。羊卓雍
+  错被誉为世界上最美丽的水。羊卓雍错，“羊”，上面；“卓”，牧场；“雍”，碧
+  玉；“错”湖。连起来就是“上面牧场的碧玉之湖”。
+
+  卓雍措被誉为世界上最美丽的水。羊卓雍措，“羊”，上面；“卓”，牧场；“雍”，
+  碧玉；“错”湖。连起来就是“上面牧场的碧玉之湖”。这是字面上对羊湖的解释，
+  而羊湖在藏人心目当中被看做是“神女散落的绿松石耳坠”，因为无论你在那个
+  角度，都不能看到羊卓的全貌，她有三个姐妹，空母错，沉错，巴久错，以即
+  古羊卓雍错四姐妹在巨大的湖盆中，手足相连，难以割舍，共同组成了让我们
+  肉眼看不到边的圣湖。她的身躯蜿蜒在群山中达一百三十多公里，只有在地图
+  或是高空你才能惊喜的发现她犹如耳坠，镶嵌在山的耳轮之上。不同时刻阳光
+  的照射，她会显现出层次极其丰富的蓝色，好似梦幻一般。
+
+  羊卓雍错湖光山色，景色如画，仿如置身人间仙境，羊湖是集高原湖泊、雪山、
+  岛屿、牧场、温泉、野生动植物、寺庙等多种景观为一体的、独特的自然风景
+  区，周围 还有常年不溶的雪山冰峰，最高的达海拔7000多米。湖泊、雪峰与蓝
+  天融为一体，让人流连忘返。
+
++ [[http://baike.baidu.com/view/24971.htm][纳木错]]
+
+  纳木错是中国第二大的咸水湖。位于西藏中部，湖面海拔4718米。湖的形状近
+  似长方形，东西长70多千米，南北宽30多千米，面积1920多平方千米。湖水最
+  大深度33米，蓄水量768亿立方米，为世界上海拔最高的大型湖泊。“纳木错”为
+  藏语，而这个湖的蒙古语名称为“腾格里海”，两种名称都是“天湖”之意。
+  
+  去纳木错，不可不去扎西半岛，此岛为岩溶性地貌，溶洞，石林，里面还有古
+  代洞穴岩画，偶尔还有人在修行。绕岛一周，需时1个半小时，体力好，爬上山
+  顶，风景绝佳。
+
+  去纳木错，一般会选择一日游，当天返回拉萨，途中休息两次。因为纳木错附
+  近住宿不是很方便，不建议留宿。
+
+  纳木错海拔高4700米，刚到西藏还未适应好，千万别去，可以把此景点安排晚
+  些去，如果实在要去准备好氧气，药品等。
+
+  晚上较冷，提前准备好保暖衣物，扎西岛上只有一简陋饭店和旅馆，条件差，
+  床位少，旺季时经常没床，请事先准备食品或帐篷、睡袋等装备。
+
+  骷髅墙位于那曲比如县境内，是用人头颅骨堆成的围墙。若有兴趣，可搭车前
+  往。
+* 游记
+网上有超级多西藏的游记，有高帅富白富美的，也有屌丝们的，有托家带口的，
+也有单身找去妹子/汉子的，看看可以对西藏行有个大致的了解～
++ http://travel.ctrip.com/youji-6130.html
++ http://travel.ctrip.com/youji-5901.html
++ http://lvyou.baidu.com/notes/e492cf44acfcc21ea5c1a962
++ http://lvyou.baidu.com/notes/1817e883c6d80ff538fab461
++ http://lvyou.baidu.com/notes/38bcf73521fca4c4e983b3db
++ http://lvyou.baidu.com/notes/5cb570563fe1e89235d87cd1
++ ...
+* 物品清单
 下面罗列的一些东西，很多或许可以不用携带，当地应该有卖。
 + 证件
   + 身份证
@@ -104,7 +250,9 @@
   + 手电
   + 电脑
   + 地图
-** 餐饮
+  + 1毛RMB
+* 餐饮
+*大众点评* ：[[http://www.dianping.com/lasa][拉萨]] [[http://www.dianping.com/linzhi][林芝]]
 
 *西藏名菜*
 
@@ -187,7 +335,7 @@
 生。其实，风干肉一般在冬天，往往是十一月底做。这时气温都在零度以下，把
 牛、羊肉割下来，挂在阴凉处，让其冰冻风干，即去水份，又保持鲜味。到了第
 二年三月以后拿下来烤食或生食，味道是鲜美的。
-** 注意事项
+* 注意事项
 + 游客须身体健康，严重心脏病、高血压患者不宜进藏；
 + 进藏旅游个人自备物品：太阳镜、防晒霜、润唇膏、运动衣裤、旅游鞋、雨具
   及日常洗涮用品，冬天赴西藏旅游须准备羽绒服；
@@ -256,25 +404,24 @@
   丸消毒。饮品中加的冰要特别提防，如不肯定水源是否清洁，还是不放为妙！
 + 在西藏拍照时，如送一些糖果或文具礼品给当地的小朋友，他们会很开心，会
   有利于同他们的沟通交往，但不提倡给予金钱
-
-** 其他
-*** 逃票
-+ 寺庙类： 
-  + 早上（8:30）和傍晚（6:00）无人看守，可轻易入内。 
-  + 利用人多混入内。 
-  + 说找高僧开光。 
-  + 说找熟人。 
-  + 利用旧票入内。 
-  + 讲价打折。 
-  + 走小门。 
-  + 说曾经来过，明天要离开了，今天特地来拜一下。 
-  + 装语言不通（事实上也是语言不太通）。 
-  + 导游证。导游证在内地已经不能免票了，不过西藏还可以。 
+* 其他
+** 逃票
++ 寺庙类：
+  + 早上（8:30）和傍晚（6:00）无人看守，可轻易入内。
+  + 利用人多混入内。
+  + 说找高僧开光。
+  + 说找熟人。
+  + 利用旧票入内。
+  + 讲价打折。
+  + 走小门。
+  + 说曾经来过，明天要离开了，今天特地来拜一下。
+  + 装语言不通（事实上也是语言不太通）。
+  + 导游证。导游证在内地已经不能免票了，不过西藏还可以。
   + 随机应变，总能进去的。
-+ 风景类： 
-  + 绕道入内。 
-  + 讲价打折。 
-** 相关网站
++ 风景类：
+  + 绕道入内。
+  + 讲价打折。
+* 相关网站
 + [[http://www.newsmth.net/nForum/board/Travel][水木Travel]]
 + [[http://www.mafengwo.cn][蚂蜂窝]]
 + [[http://www.tuniu.com/][途牛]]
