--- a/_posts/2014-10-20-2014q3.md
+++ b/_posts/2014-10-20-2014q3.md
@@ -2,8 +2,8 @@
 layout: post
 title: "2014年Q3阅读记录"
 description: ""
-category: 
-tags: []
+category: 笔记
+tags: [阅读]
 ---
 {% include JB/setup %}
 ## 解忧杂货店 ##
